@@ -1,3 +1,8 @@
+2015-05-08  Mark Wielaard  <mjw@redhat.com>
+
+	* nm.c (show_symbols): Call gelf_fsize with EV_CURRENT.
+	* strip.c (handle_elf): Likewise.
+
 2015-05-06  Mark Wielaard  <mjw@redhat.com>
 
 	* elflint.c (check_gnu_hash): Return early when 2nd hash function
