@@ -1,3 +1,7 @@
+2015-05-08  Mark Wielaard  <mjw@redhat.com>
+
+	* nlist.c (nlist): Call gelf_fsize with EV_CURRENT.
+
 2015-01-03  Mark Wielaard  <mjw@redhat.com>
 
 	* version_xlate.h (elf_cvt_Verdef): Use memmove to copy src to dest.
